# aura

./: .gitignore  Makefile  README.md  start.sh
.github/workflows/: ci.yml
deploy/: .env.example  .env.example.core  .env.example.obs  docker-compose.obs.yml  docker-compose.yml
deploy/config/: otel-collector-config.yaml  prometheus.yml
docs/: architecture.md  data_flow.md
services/ingestion/: Dockerfile  Makefile  go.mod  go.sum
services/ingestion/cmd/api/: main.go
services/ingestion/cmd/worker/: main.go
services/ingestion/internal/adapters/embed/: ollama_client.go
services/ingestion/internal/telemetry/: metrics.go
services/query/: .env.example  .gitignore  Makefile  pyproject.toml
services/query/app/: dependencies.py  main.py
services/query/app/api/: __init__.py  health.py  routes.py
services/query/app/core/: __init__.py  config.py  metrics.py  prompts.py  telemetry.py
services/query/app/models/: __init__.py  schemas.py
services/query/app/repositories/: __init__.py  qdrant_client.py
services/query/app/services/: __init__.py  ollama_client.py  rag_orchestrator.py
services/query/app/static/: index.html
services/query/tests/: conftest.py  test_main.py
services/query/tests/api/: test_health.py  test_routes.py
services/query/tests/core/: test_config.py  test_prompts.py
services/query/tests/integration/: test_infrastructure.py
services/query/tests/models/: test_schemas.py
services/query/tests/repositories/: test_qdrant_client.py
services/query/tests/services/: test_ollama_client.py  test_rag_orchestrator.py
(+27 files in other folders)
